# remote-monitor

./: .gitignore  .spectral.yaml  Makefile  README.md  docker-compose.yml
.atl/: .skill-registry.cache.json  skill-registry.md
backend/: .env.test.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  db.py  dependencies.py  logging_config.py  main.py  middleware.py
backend/app/models/: __init__.py  audit.py  measurement.py  patient.py
backend/app/routers/: health.py  measurements.py  patients.py  readyz.py
backend/app/schemas/: __init__.py  bed.py  common.py  measurement.py  patient.py
backend/app/services/: __init__.py  audit.py  crypto.py  inactivity.py  ingest.py
backend/app/ws/: __init__.py  manager.py  routes.py
backend/migrations/: env.py
backend/migrations/versions/: 699bae7f7215_add_ibis_to_measurements.py  a7c3f21b8e94_add_bed_number_to_clinical_patients.py  a9754bb20edf_initial_schema.py  add_ibis_status_column.py  ca6ca1c8fa96_add_last_measurement_at_to_clinical_patients.py  deconstruct_ibis_to_scalar.py  restore_ibis_ms_array.py
backend/tests/: conftest.py  test_bed_snapshot.py  test_health.py  test_inactivity.py  test_ingest.py  test_migrations.py  test_patients.py  test_replace_session.py  test_schema_introspection.py  test_ws.py
contracts/: README.md  asyncapi.yaml  data-models.md  openapi.yaml  websocket-types.ts
docs/: bed-replace-runbook.md  local-testing.md
frontend/: .dockerignore  Dockerfile  README.md  app.config.ts  docker-entrypoint.sh  package-lock.json  package.json  (+4 more)
(+192 files in other folders)
