# --- Project metadata -----------------------------------------------------
[project]
name = "remote-monitor-backend"
version = "0.1.0"
description = "FastAPI ingest service + WebSocket broadcast hub for the remote-monitor PoC."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic",
    "asyncpg",
    "fastapi",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "structlog",
    "uvicorn[standard]",
]

# --- uv build backend -----------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- Hatch build target ---------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["app"]
